# voice_sender

./: .gitignore  CMakeLists.txt  README.md  test.cpp  testb.cpp  vcpkg.json
cmake/: ReleaseOptimizations.cmake  ffmpeg.cmake  folly.cmake
src/: ConfigManager.cpp  ConfigManager.h  CurlMultiManager.cpp  CurlMultiManager.h  main.cpp
src/DownloadManager/: DownloadManager.cpp  DownloadManager.h  DownloadManager_SelfManage.cpp  DownloadManager_utils.cpp  TaskHandler.h  TaskManager.cpp  TaskManager.h
src/DownloadManager/AudioSender/: AudioAlignedAlloc.h  AudioSender.cpp  AudioSender.h  AudioSender_Opus.cpp  AudioSender_control.cpp  AudioSender_encoder.cpp  AudioSender_producer.cpp  AudioSender_sender.cpp  AudioUtils.h
src/DownloadManager/AudioSender/decoder/: AudioDataBuffer.h  AudioDecoder.h  AudioDecoder_FFmpeg.cpp  AudioDecoder_FFmpeg.h  AudioDecoder_Mpg123.cpp  AudioDecoder_Mpg123.h  CustomIO.hpp  IOBuf_FFmpeg.cpp  IOBuf_Mpg123.cpp  IO_FFmpeg.cpp  IO_Mpg123.cpp
src/DownloadManager/utils/: AudioDataBuffer.cpp  AudioDataBuffer.h  AudioTypes.h  ExtendedTaskItem.h
src/RTPManager/: RTPInstance.cpp  RTPInstance.h  RTPManager.cpp  RTPManager.h
src/api/: EventPublisher.cpp  EventPublisher.h  EventPublisher_handler.cpp
src/api/handlers/: Handler_GetStream.cpp  Handler_Playlist.cpp  Handler_StartStream.cpp  Handler_StopStream.cpp  Handler_UpdateStream.cpp  Handlers.h  HandlersBase.h
src/api/proto/: Action.proto  Base.proto  PlayList.proto  Request.proto  Response.proto  Stream.proto
src/kook/: ChannelJoinedData.cpp  ChannelJoinedData.h
